--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 name: Meet the Fluxers
 
 # Name of the author
-author: Amit Merchant
+author: Jess Richardson, Jason Kelley, Maoya Bassiouni, Robert Shortt, Emma Reich
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: A podcast that bridges the gap between eddy covariance flux scientists and stakeholders
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/meethefluxer-logo.png
 
 #
 # Flags below are optional
@@ -21,15 +21,15 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email:
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: meetthefluxers
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter:
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +41,7 @@ footer-links:
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics:
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
 #google_analytics_ga4: G-GABC1DEFG
@@ -49,7 +49,7 @@ google_analytics: UA-43339302-11
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
 url: https://meetthefluxers.github.io
-enforce_ssl: https://www.amitmerchant.com/reverie
+enforce_ssl:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
