--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Jess Richardson, Jason Kelley, Maoya Bassiouni, Robert Shortt, Emma Reic
 description: A podcast that bridges the gap between eddy covariance flux scientists and stakeholders
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/meethefluxers-logo.png
+avatar: /images/meethefluxers-logo
 
 #
 # Flags below are optional
