--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ name: Meet the Fluxers
 author: Jess Richardson, Jason Kelley, Maoya Bassiouni, Robert Shortt, Emma Reich
 
 # Short bio or description (displayed in the header)
-description: A podcast that bridges the gap between eddy covariance flux scientists and stakeholders
+description: >
+A podcast that bridges the gap between 
+eddy covariance flux scientists and stakeholders
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/logo.png
