--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ disqus:
 # google_analytics: GTM-MX43RGGG
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
-google_analytics_ga4: GTM-MX43RGGG
+google_analytics_ga4: G-KZ4ZQMDTP6
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
